<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:paddingBottom="8dp"
        android:title="@string/main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/basket"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:paddingBottom="8dp"
        android:title="@string/basket"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/catalog"
        android:icon="@drawable/baseline_category_24"
        android:paddingBottom="8dp"
        android:title="@string/katalog"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:paddingBottom="8dp"
        android:title="@string/profile_uz"
        app:showAsAction="ifRoom" />
</menu>